--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "browserify": "^9.0.8",
     "del": "^1.1.1",
     "es6-promise": "^2.0.1",
+    "express": "^4.14.0",
     "gulp": "^3.8.11",
+    "gulp-concat": "^2.6.0",
     "gulp-filter": "^2.0.2",
     "gulp-htmlmin": "^1.1.1",
     "gulp-load-plugins": "^0.10.0",
+    "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^2.2.0",
     "gulp-size": "^1.2.1",
     "gulp-sourcemaps": "^1.5.1",
+    "gulp-strip-debug": "^1.1.0",
     "gulp-swig": "^0.7.4",
+    "gulp-uglifyjs": "^0.6.2",
     "gulp-util": "^3.0.4",
     "handlebars": "^3.0.1",
     "hbsfy": "^2.2.1",
